// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckControl /> ref should work 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> should pass custom props 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 20px;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
  margin-left: 30;
  margin-right: 30;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
  padding-top: 20px;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
  margin-left: 30;
  margin-right: 30;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
  margin-left: 30;
  margin-right: 30;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
  id="id"
>
  <div
    aria-required="true"
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      aria-checked="true"
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="radio"
    />
    <div
      aria-hidden="true"
      aria-required="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    />
  </div>
  <label
    aria-required="true"
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> should render CheckControl correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> should render control 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> size Should render with size l correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.75rem;
  height: 1.75rem;
  width: 1.75rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.75rem;
  padding-left: 1.75rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> size Should render with size m correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> size Should render with size s correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.25rem;
  height: 1.25rem;
  width: 1.25rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.25rem;
  padding-left: 1.25rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    >
      <span>
        Icon
      </span>
    </div>
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should extend styles in global 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 10px;
  text-indent: 1px;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
  margin-top: 11px;
  text-indent: 2px;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
  margin-top: 13px;
  text-indent: 4px;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
  margin-top: 12px;
  text-indent: 3px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
  margin-top: 14px;
  text-indent: 5px;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should extend styles in local 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
  margin-top: 10px;
  text-indent: 1px;
  bottom: 200px;
  letter-spacing: 210px;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
  margin-top: 11px;
  text-indent: 2px;
  bottom: 201px;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
  margin-top: 13px;
  text-indent: 4px;
  bottom: 203px;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
  margin-top: 12px;
  text-indent: 3px;
  bottom: 202px;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
  margin-top: 14px;
  text-indent: 5px;
  bottom: 204px;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should override styles 1`] = `
.c0 {
  margin-top: 50px;
}

<div
  class="poodle-box poodle-check-control c0"
>
  <div
    class="poodle-box poodle-check-control__control c0"
  >
    <input
      class="poodle-box poodle-check-control__input c0"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c0"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box poodle-check-control__label c0"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c0"
    >
      label
    </span>
  </label>
</div>
`;

exports[`<CheckControl /> theming should render with default props correctly 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  color: #282828;
  -webkit-transition: color 150ms ease-in;
  transition: color 150ms ease-in;
}

.c0:hover {
  color: #00478A;
}

.c0:focus-within {
  color: #00478A;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px dotted;
  border-color: transparent;
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  overflow: hidden;
  -webkit-transition: borderColor 120ms ease-in;
  transition: borderColor 120ms ease-in;
}

.c1:focus-within {
  border-color: rgba(0,0,0,0.8);
}

.c2 {
  position: absolute;
  top: 0;
  left: -99px;
  width: 0;
  height: 0;
  border: 0;
  margin: 0;
  padding: 0;
}

.c2~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-normal='true'] {
  display: none;
}

.c2:checked~*[data-render-icon='true'] *[data-icon-checked='true'] {
  display: initial;
  color: #00478A;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-checked='true'] {
  color: #A6A6A6;
}

.c2:disabled~*[data-render-icon='true'] *[data-icon-normal='true'] {
  color: #A6A6A6;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 1.5rem;
  height: 1.5rem;
  width: 1.5rem;
}

.c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
  cursor: pointer;
  min-height: 1.5rem;
  padding-left: 1.5rem;
}

.c5 {
  padding-left: 8px;
}

<div
  class="poodle-box poodle-check-control hello c0"
  id="id"
>
  <div
    class="poodle-box poodle-check-control__control c1"
  >
    <input
      class="poodle-box poodle-check-control__input c2"
      id="poodle-check-control-1"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="poodle-box poodle-check-control__icon c3"
      data-render-icon="true"
    />
  </div>
  <label
    class="poodle-box poodle-check-control__label c4"
    for="poodle-check-control-1"
  >
    <span
      class="poodle-box poodle-check-control__label-text c5"
    >
      label
    </span>
  </label>
</div>
`;
